test/tests/compiler/8_loops/valid/while.plx
pub fn main(none) i32 {
    a: i32 = 0

    loop while a < 5 {
        a = a + 2
    }

    return a
}

