test/tests/compiler/8_loops/invalid_parse/paren_mismatch.plx
pub fn main(none) i32 {
    loop i: i32 = 2;
        a: i32 = 0
    }
}
